--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>校园二手市场 - 首页</title>
+    <title>网上购物系统 - 首页</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <style>
         :root {
@@ -275,7 +275,7 @@
 
 <div class="page-container">
     <header class="header-container">
-        <h1 class="header-title">校园二手市场</h1>
+        <h1 class="header-title">网上购物系统</h1>
         <div class="search-and-filters">
             <div class="search-bar">
                 <i class="fa-solid fa-magnifying-glass"></i>
@@ -326,11 +326,11 @@
     </a>
     <a href="/publish.html" class="sidebar-item" data-roles="ADMIN,SHOP_OWNER">
         <div class="icon-wrapper"><i class="fa-solid fa-plus"></i></div>
-        <span>发布闲置</span>
+        <span>发布商品</span>
     </a>
     <a href="/my-products.html" class="sidebar-item" data-roles="ADMIN,SHOP_OWNER">
         <div class="icon-wrapper"><i class="fa-solid fa-list-check"></i></div>
-        <span>我的商品</span>
+        <span>管理商品</span>
     </a>
     <a href="/my-favorites.html" class="sidebar-item" data-roles="ADMIN,MEMBER">
         <div class="icon-wrapper"><i class="fa-regular fa-star"></i></div>
@@ -351,7 +351,7 @@
             <i class="fa-regular fa-comment-dots"></i>
             <span class="notification-dot" id="chat-notification-dot"></span>
         </div>
-        <span>聊天</span>
+        <span>客服</span>
     </a>
     <a href="/settings.html" class="sidebar-item" data-roles="ALL">
         <div class="icon-wrapper"><i class="fa-solid fa-gear"></i></div>
