--- a/src/main/resources/static/product-detail.html
+++ b/src/main/resources/static/product-detail.html
@@ -259,7 +259,7 @@
         <div class="actions">
             <a href="#" class="action-btn chat-btn" id="chat-btn">
                 <i class="fa-regular fa-comment-dots"></i>
-                <span>和卖家聊</span>
+                <span>联系商家</span>
             </a>
             <button class="action-btn fav-btn" id="fav-btn">
                 <i class="fa-regular fa-star"></i>
