--- a/src/main/resources/static/publish.html
+++ b/src/main/resources/static/publish.html
@@ -217,7 +217,7 @@
 
 <div class="main-container">
     <div class="form-container">
-        <h1>发布您的闲置宝贝</h1>
+        <h1>发布商品</h1>
         <form id="publishForm">
             <div class="form-group">
                 <label for="title">商品标题 <span class="required-star">*</span></label>
