--- a/src/main/resources/static/my-products.html
+++ b/src/main/resources/static/my-products.html
@@ -159,6 +159,9 @@
                         <div class="product-item-details">
                             <h3 class="product-item-title">${product.title}</h3>
                             <span class="product-item-price">¥${product.price.toFixed(2)}</span>
+                            <div style="color: #666; font-size: 0.9rem; margin-top: 5px;">
+                                库存: ${product.stock} | 销量: ${product.sales}
+                            </div>
                         </div>
                         <div class="product-item-action">
                             <i class="fa-solid fa-pen-to-square edit-icon"></i>
