--- a/src/main/resources/static/edit-product.html
+++ b/src/main/resources/static/edit-product.html
@@ -32,7 +32,7 @@
         }
         .form-group { margin-bottom: 20px; }
         label { display: block; margin-bottom: 8px; color: #555; font-weight: bold; }
-        input[type="text"], select, textarea, input[type="file"] {
+        input[type="text"],input[type="number"], select, textarea, input[type="file"] {
             width: 100%;
             padding: 12px;
             border: 1px solid #ddd;
@@ -121,6 +121,10 @@
         <div class="form-group">
             <label for="price">价格 (元) <span class="required-star">*</span></label>
             <input type="text" id="price" required pattern="^\d+(\.\d{1,2})?$">
+        </div>
+        <div class="form-group">
+            <label for="stock">库存数量 <span class="required-star">*</span></label>
+            <input type="number" id="stock" required min="0">
         </div>
         <div class="form-group">
             <label for="description">商品描述</label>
@@ -218,6 +222,7 @@
 
             document.getElementById('title').value = product.title;
             document.getElementById('price').value = product.price.toFixed(2);
+            document.getElementById('stock').value = product.stock;
             document.getElementById('description').value = product.description;
             document.getElementById('category').value = product.category;
 
@@ -237,6 +242,7 @@
             const formData = new FormData();
             formData.append('title', document.getElementById('title').value);
             formData.append('price', document.getElementById('price').value);
+            formData.append('stock', document.getElementById('stock').value);
             formData.append('description', document.getElementById('description').value);
             formData.append('category', document.getElementById('category').value);
 
