--- a/src/main/resources/static/my-favorites.html
+++ b/src/main/resources/static/my-favorites.html
@@ -136,8 +136,7 @@
                                 <div class="product-item-details">
                                     <h3 class="product-item-title">${product.title}</h3>
                                     <div class="seller-location-info">
-                                        <span class="seller-name">卖家：${product.seller.nickname}</span> |
-                                        <span class="location">交易地点：${product.location}</span>
+                                        <span class="seller-name">商家：${product.seller.nickname}</span>
                                     </div>
                                     <span class="product-item-price">¥${product.price.toFixed(2)}</span>
                                 </div>
